python-playground-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-playground-ui-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-playground-ui
  template:
    metadata:
      labels:
        app: python-playground-ui
    spec:
      containers:
        - name: python-playground-ui
          image: gcr.io/caas-390503/python-playground-ui@sha256:e8b404fb4792bebd1cef04ffc65aa261835f4b670bbe0a487ba0a6f884fd79dc
          ports:
            - containerPort: 80
