python-playground-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-playground-server-service
spec:
  selector:
    app: python-playground-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
