python-playground-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-playground-ui-service
spec:
  selector:
    app: python-playground-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
