httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hpa-httproute
spec:
  parentRefs:
  - kind: Gateway
    name: hpa-gateway   

  rules:
  - backendRefs:
      - name: clusterip-ui-service
        port: 80
    matches:
     - path:
        type: PathPrefix
        value: /
