python-playground-ui-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-autoscale
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http 
  selector:
    app: store-autoscale
  type: ClusterIP
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-autoscale
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-autoscale
  labels:
    gateway: store-autoscale
spec:
  parentRefs:
  - name: store-autoscale
  rules:
  - backendRefs:
    - name: store-autoscale
      port: 8080
